fix spacing

--- a/scss/_section.scss
+++ b/scss/_section.scss
@@ -80,6 +80,11 @@
   }
 
   &--no-top-padding {
+
     padding-top: 0;
+  }
+
+  &--no-bottom-padding {
+    padding-bottom: 0;
   }
 }
